# api_ingestion

./: Makefile  main.py  pyproject.toml  requirements.txt  setup.py  zappa_settings.json
.github/workflows/: deploy.yaml  feature_branch.yaml
ingestion/: Exceptions.py  api.py  checkpoints.py  ingestion_api.py  lambda.py  writer.py
ingestion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api.py  test_ingestion_api.py  test_writer.py
