[tool.poetry]
name = "mercado-bitcoin"
version = "0.1.0"
description = "mercado bitcoin api ingestion to lambda"
authors = ["Daniel Penalva <dkajah@gmail.com>"]
readme = "README.md"
packages = [{include = "mercado_bitcoin"}]

[tool.poetry.dependencies]
python = "^3.8.0"
requests = "^2.28.1"
logging = "^0.4.9.6"
backoff = "^2.1.2"
ratelimit = "^2.2.1"
boto3 = "^1.24.66"
pynamodb = "^5.2.1"
zappa = "^0.53.0"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
