[tool.poetry]
name = "api-ingestion"
version = "0.1.0"
description = ""
authors = ["Daniel Penalva <dkajah@gmail.com>"]
readme = "README.md"
packages = [{include = "ingestion"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
logging = "^0.4.9.6"
backoff = "^2.1.2"
ratelimit = "^2.2.1"
boto3 = "^1.24.67"
pynamodb = "^5.2.1"
zappa = "^0.53.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
